--- a/app/src/main/res/layout/activity_full_screen.xml
+++ b/app/src/main/res/layout/activity_full_screen.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.magdy.flickrgallery.FullScreenActivity"
-    android:background="@android:color/black">
-    <android.support.v4.view.ViewPager
+    android:background="@android:color/black"
+    tools:context="com.magdy.flickrgallery.UI.FullScreenActivity">
+
+    <com.magdy.flickrgallery.UI.ExtendedViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/viewpager"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
